--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tailwind Exercise</title>
+    <link rel="stylesheet" href="./output.css">
 </head>
 <body>
-    Tailwind
+    <p class="text-xl font-bold underline">
+        Tailwind
+    </p>
+    <h1 class="font-light">heading</h1>
 </body>
 </html>
